2009-05-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr.py: Changed API name labels.

2009-05-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* picasa.py: Added support for Picasa Web Album.
	* keyring.py: Added support for GNOME Keyring.

2009-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py, gphotoframe.glade, ja.po, plugins/*:
	  Added plugin preferences.

2009-05-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/__init__.py: Fixed the plugins path.

2009-05-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* rss.py: Initial import (issue #12).
	* tumblr.py: Initial import (issue #11).
	* *: Code refactoring.

2009-05-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.2.1 release.
	* setup.py: Set the permission for data_files (issue #8).

2009-05-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.2 release.
	* autostart.py: Fixed bugs for non-install mode.
	* photoframe.py (PhotoFrame.set_photo): Fixed tooltips for
	  photo information.

2009-05-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py (PhotoDialog.run): Delete disused arguments.
	* photoframe.py, plugins/*.py: Code refactoring.
	* urlget.py: Added the copyright notice.

2009-05-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py, autostart.py, gphotoframe.glade: Added support
	  for auto start.

2009-05-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoliststore.py, base.py: Dropped depend on the glib module
	  (issue #6).
	* preferences.py, base.py, folder.py, flicke.py: Code refactoring.
	* gphotoframe: Updated lib loading.
	* setup.py: Added gphotoframe.utils package.
	* fspot.py (PhotoTargetFspot): Support for F-Spot tag tree.

2009-05-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/__init__.py: Capitalized some valiables.
	* preferences.py: Save the recent preference tab / source.
	* flickr.py: Added support for flickr.photos.search.
	* fspot.py: Fixed a bug.